# Zpg

./: .circle.yml.kate-swp  .gitignore  CMakeLists.txt  COPYING  LICENSE  LICENSE.txt  LibZpg.cpp  LibZpg.hpp  README.md  appveyor.yml  circle.yml  main.cpp
cmake/: FindLibZpg.cmake  FindZOPFLI.cmake  FindZpg.cmake
include/: LibZpg.hpp
src/: LibZpg.cpp  LibZpg.hpp  Zpg.cpp  Zpg.hpp
tools/: console_packer.cpp  test.txt  worker.cpp  worker.hpp  zpg_packer.cpp
